# ferrocious

./: .gitignore  Cargo.toml  README.md  design_principles.md
src/: lib.rs  main.rs  utils.rs
src/canvas/: mod.rs
src/core/: mod.rs
src/core/canvas/: mod.rs
src/core/entity/: attributes.rs  bindings.rs  builder.rs  mod.rs
src/core/entity/capabilities/: mod.rs  sizeable.rs
src/core/interpolate/: interpolators.rs  mod.rs
src/core/mutator/: mod.rs  mutator.rs  timestamp.rs
src/core/render/: GraphicsPassContext.rs  default_shaders.rs  mod.rs  pipeline_layouts.rs  rgba.rs
src/core/tests/: mod.rs
src/core/utils/: mod.rs
src/entity/: entity.rs  mod.rs
src/mutator/: mod.rs  mutator.rs  timestamp.rs
src/stl/: mod.rs
src/stl/entities/: lines.rs  mod.rs  polygons.rs
src/stl/mutators/: mod.rs  sizeable_mutator.rs
src/stl/shaders/: colors.rs  mod.rs
src/tests/: mod.rs
