[package]
name = "ferrocious"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
ndarray = "0.16"
subprocess = "0.2.9"
video-rs = { version = "0.9.0", features = ["ndarray"] }
tracing = "0.1"
tracing-subscriber = "0.3"
vulkano = "0.35.0"
vulkano-shaders = "0.35.0"
image = "0.25.5"
thiserror = "2.0.12"
bytemuck = { version = "1.23.1", features = ["derive"] }

[features]
stl=[]
